Bug 360808 - KAlgebra crash on exit
Summary: KAlgebra crash on exit
Status: RESOLVED FIXED
Alias: None
Product: kalgebra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-21 11:23 UTC by Diego
Modified: 2016-03-21 23:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Diego 2016-03-21 11:23:31 UTC
After doing some math I closed kalgebra and it crashed with the following backtrace:
Thread no. 1 (10 frames)
 #0 QHash<QString, Analitza::Object*>::findNode at /usr/include/qt5/QtCore/qhash.h:959
 #1 QHash<QString, Analitza::Object*>::contains at /usr/include/qt5/QtCore/qhash.h:941
 #2 Analitza::ExpressionTypeChecker::isVariableDefined at /usr/src/debug/analitza-15.12.1/analitza/expressiontypechecker.cpp:338
 #3 Analitza::ExpressionTypeChecker::visit at /usr/src/debug/analitza-15.12.1/analitza/expressiontypechecker.cpp:322
 #4 Analitza::Ci::accept at /usr/src/debug/analitza-15.12.1/analitza/variable.cpp:44
 #5 Analitza::ExpressionTypeChecker::solve at /usr/src/debug/analitza-15.12.1/analitza/expressiontypechecker.cpp:145
 #6 Analitza::ExpressionTypeChecker::visit at /usr/src/debug/analitza-15.12.1/analitza/expressiontypechecker.cpp:661
 #7 Analitza::Apply::accept at /usr/src/debug/analitza-15.12.1/analitza/apply.cpp:96
 #8 Analitza::ExpressionTypeChecker::visit at /usr/src/debug/analitza-15.12.1/analitza/expressiontypechecker.cpp:816
 #9 Analitza::Container::accept at /usr/src/debug/analitza-15.12.1/analitza/container.cpp:81

Reproducible: Sometimes

Steps to Reproduce:
1. Open KAlgebra
2. Do some math
3. Close KAlgebra

Actual Results:  
Crash

Expected Results:  
No crash

Here is report on Fedora bugzilla:
https://bugzilla.redhat.com/show_bug.cgi?id=1314370
Comment 1 Aleix Pol 2016-03-21 23:45:28 UTC
Git commit 9ebce632625c768da99cf8d67272d12c32241a2b by Aleix Pol.
Committed on 21/03/2016 at 23:37.
Pushed by apol into branch 'Applications/16.04'.

Fix destruction procedure

The highlighter module is already parented, no need to explicitly
destroy.

M  +0    -1    analitzawidgets/expressionedit.cpp

http://commits.kde.org/analitza/9ebce632625c768da99cf8d67272d12c32241a2b