Fix destruction procedure

The highlighter module is already parented, no need to explicitly
destroy.

BUG: 360808